[package]
name = "ratatui_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
itertools = "0.12.0"
ratatui = "0.25.0"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
